--- a/wsfrontend-fabrica25.2/package.json
+++ b/wsfrontend-fabrica25.2/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.12.1",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
